--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,6 @@ theme: jekyll-theme-minimal
 title: Neal R. Barshes, MD, MPH
 description: resources
 
-logo: [Location of the logo]
+logo: [https://www.bcm.edu/sites/default/files/profile_photos/nbarshes.jpeg]
 show_downloads: ["true" or "false" to indicate whether to provide a download URL]
 google_analytics: [Your Google Analytics tracking ID]
