--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,6 @@
-theme: jekyll-theme-minimal
-
-title: Neal R. Barshes, MD, MPH
-description: resources
-
-logo: [https://www.bcm.edu/sites/default/files/profile_photos/nbarshes.jpeg]
-show_downloads: ["true" or "false" to indicate whether to provide a download URL]
-google_analytics: [Your Google Analytics tracking ID]
+title: Minimal theme
+title_image: /assets/img/title-image.png
+logo: /assets/img/logo.png
+description: Minimal is a theme for GitHub Pages.
+show_downloads: true
+google_analytics:
