--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Minimal theme
-title_image: /assets/img/title-image.png
-logo: /assets/img/logo.png
+title_image: [https://www.bcm.edu/sites/default/files/profile_photos/nbarshes.jpeg]
+logo: [https://www.bcm.edu/sites/default/files/profile_photos/nbarshes.jpeg]
 description: Minimal is a theme for GitHub Pages.
 show_downloads: true
 google_analytics:
