Set theme jekyll-theme-minimal

--- a/_config.yml
+++ b/_config.yml
@@ -4,3 +4,5 @@ logo: [https://www.bcm.edu/sites/default/files/profile_photos/nbarshes.jpeg]
 description: Minimal is a theme for GitHub Pages.
 show_downloads: true
 google_analytics:
+
+theme: jekyll-theme-minimal
