--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,6 @@
-title: Minimal theme
+theme: jekyll-theme-minimal
 title_image: [https://www.bcm.edu/sites/default/files/profile_photos/nbarshes.jpeg]
 logo: [https://www.bcm.edu/sites/default/files/profile_photos/nbarshes.jpeg]
-description: Minimal is a theme for GitHub Pages.
+description: Resources for preventing amputations.
 show_downloads: true
 google_analytics:
-
-theme: jekyll-theme-minimal
