--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,7 @@
+title: Minimal theme
+title_image: /assets/img/title-image.png
+logo: /assets/img/logo.png
+description: Minimal is a theme for GitHub Pages.
+show_downloads: true
+google_analytics:
 theme: jekyll-theme-minimal
-
