--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title: Minimal theme
+title: Neal R. Barshes, M.D., M.P.H.
 title_image: /assets/img/title-image.png
 logo: /assets/img/logo.png
-description: Minimal is a theme for GitHub Pages.
+description: Resources for amputation prevention.
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
