--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Neal R. Barshes, M.D., M.P.H.
-title_image: /assets/img/title-image.png
+title_image: /assets/profile1.jpg
 logo: /assets/img/logo.png
 description: Resources for amputation prevention.
 show_downloads: false
