--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Neal R. Barshes, M.D., M.P.H.
 title_image: /assets/profile1.jpg
-logo: /assets/img/logo.png
+logo: /assets/profile1.jpg
 description: Resources for amputation prevention.
 show_downloads: false
 google_analytics:
