--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Neal R. Barshes, M.D., M.P.H.
+title: Neal R Barshes, MD, MPH
 title_image: /assets/profile1.jpg
-logo: /assets/profile1.jpg
+logo: /assets/profile3.jpg
 description: Resources for amputation prevention.
 show_downloads: false
 google_analytics:
