--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Neal R Barshes, MD, MPH
-title_image: /assets/profile1.jpg
+title_image: /assets/GuardYourFeetImage01.jpg
 logo: /assets/profile3.jpg
 description: Resources for amputation prevention.
 show_downloads: false
