--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Neal R Barshes, MD, MPH
-title_image: /assets/GuardYourFeetImage01.jpg
-logo: /assets/profile3.jpg
+title_image: Guard Your Feet
+logo: /assets/GuardYourFeetImage01.jpg
 description: Resources for amputation prevention.
 show_downloads: false
 google_analytics:
