--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title: Neal R Barshes, MD, MPH
+title: Neal R Barshes, MD, MPH: Resources for Amputation Prevention.
 title_image: Guard Your Feet
 logo: /assets/GuardYourFeetImage01.jpg
-description: Resources for amputation prevention.
+description: 
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-minimal
