--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Neal R Barshes, MD, MPH: Resources for Amputation Prevention.
+title: Neal R Barshes, MD, MPH
 title_image: Guard Your Feet
 logo: /assets/GuardYourFeetImage01.jpg
 description: 
