--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Neal R Barshes, MD, MPH
+title: Resources from Neal R Barshes, MD, MPH
 title_image: Guard Your Feet
-logo: /assets/GuardYourFeetImage01.jpg
+logo: /assets/GuardYourFeetColor01.jpg
 description: 
 show_downloads: false
 google_analytics:
