--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Resources from Neal R Barshes, MD, MPH
+title: Preventing Leg Amputations
 title_image: Guard Your Feet
 logo: /assets/GuardYourFeetColor01.jpg
 description: 
