--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Preventing Leg Amputations
+title: Leg Amputation Prevention: Resources
 title_image: Guard Your Feet
 logo: /assets/GuardYourFeetColor01.jpg
 description: 
