--- a/FootInfection/_config.yml
+++ b/FootInfection/_config.yml
@@ -1,7 +1,7 @@
-title: Leg Amputation Prevention Resources
-title_image: Guard Your Feet
+title: Foot Infection Management
+title_image: Foot Infections
 logo: /assets/GuardYourFeetColor02.jpg
-description: 
+description: Information and resources directly relevant to the clinical management of foot infections associated with peripheral artery disease or diabetes. These are intended as adjuncts and do NOT replace clinical experience and clinical judgement. 
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-minimal
