--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Leg Amputation Prevention Resources
 title_image: Guard Your Feet
-logo: /assets/FeetForGitHub.jpg
+logo: /assets/FeetForGitHub2.jpg
 description: 
 show_downloads: false
 google_analytics:
