--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Keeping Feet, Avoiding Amputation
+title: Healing Feet, Avoiding Amputation
 title_image: Guard Your Feet
 logo: /assets/FeetForGitHub2.jpg
 description: 
